kubernetes/apps/flux-system/capacitor-next/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor-next
spec:
  hostnames: ["gitops.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: capacitor-next
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
